--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,8 +4,65 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="{{ path('acceuil') }}">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('acceuil') }}">
+                            Acceuil
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarClubMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Club
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarClubMenuLink">
+                            <a class="dropdown-item" href="{{ path('histoire') }}">Histoire</a>
+                            <a class="dropdown-item" href="{{ path('enseignants') }}">Les Enseignants</a>
+                            <a class="dropdown-item" href="{{ path('bureau') }}">Bureau</a>
+                            <a class="dropdown-item" href="{{ path('contact') }}">Contact</a>
+                            <a class="dropdown-item" href="{{ path('dojo') }}">Dojo</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDisciplinesMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Disciplines
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDisciplinesMenuLink">
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarInscriptionMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Inscription
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarInscriptionMenuLink">
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarActualitesMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Actualités
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarActualitesMenuLink">
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('documents') }}">
+                            Documents
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
