--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,18 @@
             .dropdown:hover .dropdown-menu{
                 display: block;
             }
+            .page-footer {
+                background: lightgray;
+            }
+            .navbar .navbar-nav {
+                display: inline-block;
+                float: none;
+                vertical-align: top;
+            }
+
+            .navbar .navbar-collapse {
+                text-align: center;
+            }
         </style>
     </head>
     <body>
@@ -23,7 +35,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" style="color: black" href="{{ path('acceuil') }}">
+                        <a class="nav-link" style="color: black; background: white" href="{{ path('acceuil') }}">
                             Acceuil
                         </a>
                     </li>
@@ -70,5 +82,97 @@
         </nav>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+        <!-- Footer -->
+        <footer class="page-footer font-small stylish-color-dark pt-4 fixed-bottom">
+            <!-- Footer Links -->
+            <div class="container text-center text-md-left">
+                <!-- Grid row -->
+                <div class="row">
+                    <!-- Grid column -->
+                    <div class="col-md-4 mx-auto">
+                        <!-- Content -->
+                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Footer Content</h5>
+                        <p>
+                            Ceci est un exemple pour voir le rendu si un texte est ajouté ici.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                            dolore magna aliqua.
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+                    <hr class="clearfix w-100 d-md-none">
+                    <!-- Grid column -->
+                    <div class="col-md-2 mx-auto">
+                        <!-- Links -->
+                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Disciplines</h5>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="#">Disciplines 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Disciplines 2</a>
+                            </li>
+                            <li>
+                                <a href="#">Disciplines 3</a>
+                            </li>
+                            <li>
+                                <a href="#">Disciplines 4</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Grid column -->
+                    <hr class="clearfix w-100 d-md-none">
+                    <!-- Grid column -->
+                    <div class="col-md-2 mx-auto">
+                        <!-- Links -->
+                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Contact</h5>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="#">Contact 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Contact 2</a>
+                            </li>
+                            <li>
+                                <a href="#">Contact 3</a>
+                            </li>
+                            <li>
+                                <a href="#">Contact 4</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <!-- Grid column -->
+                    <hr class="clearfix w-100 d-md-none">
+                    <!-- Grid column -->
+                    <div class="col-md-2 mx-auto">
+                        <!-- Links -->
+                        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Sponsors</h5>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a href="#">Sponsor 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Sponsor 2</a>
+                            </li>
+                            <li>
+                                <a href="#">Sponsor 3</a>
+                            </li>
+                            <li>
+                                <a href="#">Sponsor 4</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Grid column -->
+                </div>
+                <!-- Grid row -->
+            </div>
+            <!-- Footer Links -->
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">© 2020 Copyright:
+                <a href="https://mathiastop.eu"> Mathias Top</a>
+            </div>
+            <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
     </body>
 </html>
