[~] remove useless comments

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -150,7 +150,7 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <div class="text-center py-3">© 2020 Copyright:
                 <a href="https://mathiastop.eu"> Mathias Top</a>
             </div>
         </footer>
