[+] disciplines' controller and templates

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,6 +56,10 @@
                             Disciplines
                         </a>
                         <div class="dropdown-menu" style="background: orange" aria-labelledby="navbarDisciplinesMenuLink">
+                            <a class="dropdown-item" href="{{ path('judo') }}">Judo</a>
+                            <a class="dropdown-item" href="{{ path('ju-jitsu') }}">Ju Jitsu</a>
+                            <a class="dropdown-item" href="{{ path('taiso') }}">Taiso</a>
+                            <a class="dropdown-item" href="{{ path('ne-waza') }}">Ne Waza</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -98,16 +102,16 @@
                         <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Disciplines</h5>
                         <ul class="list-unstyled">
                             <li>
-                                <a href="#">Disciplines 1</a>
+                                <a href="{{ path('judo') }}">Judo</a>
                             </li>
                             <li>
-                                <a href="#">Disciplines 2</a>
+                                <a href="{{ path('ju-jitsu') }}">Ju Jitsu</a>
                             </li>
                             <li>
-                                <a href="#">Disciplines 3</a>
+                                <a href="{{ path('taiso') }}">Taiso</a>
                             </li>
                             <li>
-                                <a href="#">Disciplines 4</a>
+                                <a href="{{ path('ne-waza') }}">Ne Waza</a>
                             </li>
                         </ul>
                     </div>
