--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AcceuilController!{% endblock %}
+{% block title %}Hello AccueilController!{% endblock %}
 
 {% block body %}
 <style>
