--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,7 +36,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" style="color: black; background: white" href="{{ path('acceuil') }}">
-                            Acceuil
+                            Accueil
                         </a>
                     </li>
                     <li class="nav-item dropdown">
