--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,14 +28,14 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{{ path('acceuil') }}"><img src="assets/luc_logo.png" alt="logo"></a>
+            <a class="navbar-brand" href="{{ path('accueil') }}"><img src="assets/luc_logo.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" style="color: black; background: white" href="{{ path('acceuil') }}">
+                        <a class="nav-link" style="color: black; background: white" href="{{ path('accueil') }}">
                             Accueil
                         </a>
                     </li>
