--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -93,7 +93,7 @@
         {% endif %}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
-        <footer class="page-footer font-small stylish-color-dark pt-4 fixed-bottom">
+        <footer class="page-footer font-small stylish-color-dark pt-4">
             <div class="container text-center text-md-left">
                 <div class="row">
                     <div class="col-md-4 mx-auto">
