--- a/templates/actualites/index.html.twig
+++ b/templates/actualites/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ActualitesController!{% endblock %}
+{% block title %}Actualités - Lille Judo!{% endblock %}
 
 {% block body %}
 <style>
