--- a/templates/club/index.html.twig
+++ b/templates/club/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ClubController!{% endblock %}
+{% block title %}Club - Lille Judo{% endblock %}
 
 {% block body %}
 <style>
