--- a/templates/disciplines/index.html.twig
+++ b/templates/disciplines/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DisciplinesController!{% endblock %}
+{% block title %}Disciplines - Lille Judo{% endblock %}
 
 {% block body %}
 <style>
