--- a/templates/disciplines/ju-jitsu.html.twig
+++ b/templates/disciplines/ju-jitsu.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello JuJitsuController!{% endblock %}
+{% block title %}Ju-Jitsu - Lille Judo{% endblock %}
 
 {% block body %}
 <style>
