--- a/templates/disciplines/ne-waza.html.twig
+++ b/templates/disciplines/ne-waza.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello NeWazaController!{% endblock %}
+{% block title %}Ne-Waza - Lille Judo{% endblock %}
 
 {% block body %}
 <style>
