--- a/templates/disciplines/taiso.html.twig
+++ b/templates/disciplines/taiso.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TaisoController!{% endblock %}
+{% block title %}Taiso - Lille Judo{% endblock %}
 
 {% block body %}
 <style>
