--- a/templates/documents/index.html.twig
+++ b/templates/documents/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DocumentsController!{% endblock %}
+{% block title %}Documents - Lille Judo{% endblock %}
 
 {% block body %}
 <style>
