--- a/templates/disciplines/judo.html.twig
+++ b/templates/disciplines/judo.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello JudoController!{% endblock %}
+{% block title %}Judo - Lille Judo{% endblock %}
 
 {% block body %}
 <style>
