--- a/templates/inscription/index.html.twig
+++ b/templates/inscription/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello InscriptionController!{% endblock %}
+{% block title %}Inscription - Lille Judo{% endblock %}
 
 {% block body %}
 <style>
