[+] histoire (only text)

--- a/templates/club/histoire.html.twig
+++ b/templates/club/histoire.html.twig
@@ -3,18 +3,38 @@
 {% block title %}Histoire - Lille Judo{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/mtop/EPITECH/HUB/lillejudo/src/Controller/ClubController.php'|file_link(0) }}">src/Controller/ClubController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/mtop/EPITECH/HUB/lillejudo/templates/club/index.html.twig'|file_link(0) }}">templates/club/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div>
+        <h2 class="text-center">Historique du club</h2>
+        <div class="text-justify text-center">
+            Créée en 1950, la section Judo eut du mal à se développer faute de salles. Animée par des étudiants Ceinture Noire,
+            apôtres du Judo et dévoués à son développement (M.M. DEVULDER, MAUFROID), la section se pérennisa cependant.<br/>
+            En 1961, les cours se faisaient dans une arrière salle de café. L'arrivée des Professeurs d'E.P.S. permit de
+            relancer la discipline en même temps que s'ouvraient deux salles de sport universitaire (Salle DEBEYRE et salle CHATELET).<br/>
+            Par la suite, une autre salle de judo fut construite à DEBEYRE pour s'achever dans une très belle et grande salle dans le même gymnase.
+            Le Judo était devenue majeur.<br/>
+        </div>
+        <h2 class="text-center">Les divers Présidents</h2>
+        <div class="text-justify text-center">
+            1950 : M. DEVULDER, étudiant en Médecine, excellent combattant, tenait avec J.M. MAGIN, la section à bout de bras.<br/>
+            1957 : le Docteur CASAGNE, Médecin Fédéral de la Ligue des Flandres Artois, accepta de prendre la Direction.<br/>
+            1973 : le Docteur LEON accepta la responsabilité de la section. puis le docteur GUITTELIER assura la Direction administrative, tandis que Jean-Pierre CASTEL assurait la Direction technique.<br/>
+            1993 : la Présidence est assurée par Jean-Pierre CASTEL qui, avec compétence et dynamisme, en a fait une solide section.<br/>
+        </div>
+        <h2 class="text-center">Quelques personnalités marquantes</h2>
+        <div class="text-justify text-center">
+            M.M. DEVULDER (Médecine) et MAUFROID (Pharmacie) ont su, dans la période difficile, se battre pour promouvoir leur discipline.<br/>
+            Maurice DECLERCQ, aujourd'hui Chirurgien, Champion de France et International, apporta sa contribution dans l'enseignement des étudiants.<br/>
+            Lucien BATIGNE, Professeur E.P.S., qui a maintenu la section en l'introduisant dans le cadre de l'Arrêté Rectoral (1961-1968).<br/>
+            M.M. DEBAECKER et DEKEYSER, jeunes professeurs E.P.S., assurèrent des cours de qualité (1968- 1972).<br/>
+            A partir de 1973, M. Jean-Pierre CASTEL, Professeur E.P.S. B.E., sut relancer la section, la promouvoir et en faire une section grande et efficace; l'une des meilleures de la Région.<br/>
+            A partir de 1999, Sylvain CARON, Professeur E.P.S. - B.E. - CN4, Directeur Technique de la section, permit aux compétiteurs de s'affirmer dans les Championnats divers.<br/>
+        </div>
+        <h2 class="text-center">L'enseignement</h2>
+        <div class="text-justify text-center">
+            On fit appel à des civils professeurs de Judo Diplômés d'Etat. Il y eu Messieurs MARIOTTE et VIAENE, B.E., coordonnés par Lucien BATIGNE.<br/>
+            Ensuite, Messieurs DEBAECKER et DEKEYSER, Professeurs d'E.P.S. et B.E. continuèrent avec Jean- Pierre CASTEL, Professeur E.P.S.,
+            qui prit successivement, avec brio, les fonctions de Directeur Technique puis de Président.<br/>
+            Avec une équipe solide, Jean-Pierre CASTEL fit progresser le L.U.C. et amena la section à un excellent niveau.
+        </div>
+    </div>
 {% endblock %}
