--- a/templates/club/enseignants.html.twig
+++ b/templates/club/enseignants.html.twig
@@ -3,18 +3,39 @@
 {% block title %}Enseignants - Lille Judo{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/mtop/EPITECH/HUB/lillejudo/src/Controller/ClubController.php'|file_link(0) }}">src/Controller/ClubController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/mtop/EPITECH/HUB/lillejudo/templates/club/index.html.twig'|file_link(0) }}">templates/club/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div>
+        <div class="container">
+            <ul class="list-group list-group-flush text-center">
+                <li class="list-group-item">
+                    <span class="font-weight-bold">Directeur Technique Compétitions Adultes:</span> BONTE Thomas, 2ème Dan, DE
+                </li>
+                <li class="list-group-item">
+                    <span class="font-weight-bold">Directeur Technique Enseignement et Pédagogie:</span> MAZURIER Alexandre, 2ème Dan, DE
+                </li>
+                <li class="list-group-item">
+                    <span class="font-weight-bold">Directeur Technique Ne-Waza:</span> PFANZELT Helmut, 4ème Dan, CQP
+                </li>
+            </ul>
+        </div>
+        <h2 class="text-center">Professeurs</h2>
+        <div class="container">
+            <ul class="list-group list-group-flush text-center">
+                <li class="list-group-item">
+                    DEPRY Pacôme, 2ème Dan, BE 1
+                </li>
+                <li class="list-group-item">
+                    LABIAUX Lydéric, 2ème Dan, CQP
+                </li>
+                <li class="list-group-item">
+                    SOENNE Philippe, 2ème Dan, BE 1
+                </li>
+                <li class="list-group-item">
+                    DELAUNAY Raphael, 2ème Dan, BE 1
+                </li>
+                <li class="list-group-item">
+                    LABIAUX Chloé, 2ème Dan, CQP
+                </li>
+            </ul>
+        </div>
+    </div>
 {% endblock %}
