--- a/templates/club/bureau.html.twig
+++ b/templates/club/bureau.html.twig
@@ -3,18 +3,22 @@
 {% block title %}Bureau - Lille Judo{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/mtop/EPITECH/HUB/lillejudo/src/Controller/ClubController.php'|file_link(0) }}">src/Controller/ClubController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/mtop/EPITECH/HUB/lillejudo/templates/club/index.html.twig'|file_link(0) }}">templates/club/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div>
+        <div class="container">
+            <ul class="list-group list-group-flush text-center">
+                <li class="list-group-item">
+                    <span class="font-weight-bold">Président:</span> BONTE Thomas
+                </li>
+                <li class="list-group-item">
+                    <span class="font-weight-bold">Trésorier:</span> PAPEGAY Benoit
+                </li>
+                <li class="list-group-item">
+                    <span class="font-weight-bold">Secrétaire:</span> LECLERCQ Marie
+                </li>
+                <li class="list-group-item">
+                    <span class="font-weight-bold">Secrétaire Adjointe:</span> MAQUERRE Béatrice
+                </li>
+            </ul>
+        </div>
+    </div>
 {% endblock %}
