--- a/templates/club/contact.html.twig
+++ b/templates/club/contact.html.twig
@@ -4,9 +4,14 @@
 
 {% block body %}
     <div class="container text-center">
+        <h2>Contact</h2>
         {{ form_start(form) }}
         {{ form_widget(form) }}
         <input type="submit" value="Send"/>
         {{ form_end(form) }}
+    </div>
+    <div class="container text-center">
+        <h2>Réseaux</h2>
+        <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/"><img src="assets/FB_logo.jpg"></a>
     </div>
 {% endblock %}
