--- a/templates/club/dojo.html.twig
+++ b/templates/club/dojo.html.twig
@@ -3,18 +3,60 @@
 {% block title %}Dojo - Lille Judo{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/mtop/EPITECH/HUB/lillejudo/src/Controller/ClubController.php'|file_link(0) }}">src/Controller/ClubController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/mtop/EPITECH/HUB/lillejudo/templates/club/index.html.twig'|file_link(0) }}">templates/club/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2 class="text-center">SALLE DEBEYRE</h2>
+                <h3>Horaires Saison 2018-2019:</h3>
+                <h4>Judo</h4>
+                Lundi 18h45-20h15: Cours Judo Adultes (nés avant 2005)<br/>
+                Mercredi 13h30-14h30: Cours Judo Poussins (enfants nés en 2010-2011)<br/>
+                Mercredi 14h30-15h30: Cours Judo Benjamins/Minimes (enfants nés de 2006 à 2009)<br/>
+                Mercredi 20h-21h30: Cours Judo Adultes<br/>
+                Samedi 13h30-14h30: Cours Judo Babys (enfants nés en 2014-2015)<br/>
+                Samedi 14h30-15h30: Cours Judo Mini-Poussins (enfants nés en 2012-2013)<br/>
+                Samedi 15h30-16h30: Cours Judo Poussins<br/>
+                <h4>Ju-Jitsu</h4>
+                Mardi 20h-21h30: Cours Jujitsu Adultes<br/>
+                Vendredi 20h-21h30: Cours Jujitsu Adultes<br/>
+                <h3>Localisation:</h3>
+                <div class="text-center">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.75805227567!2d3.071911315859676!3d50.63161128217546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d58cd174730f%3A0xf0f98712dd300f10!2sSports%20de%20contact%20Lille%20Etudiants%20Club!5e0!3m2!1sfr!2sfr!4v1594216294738!5m2!1sfr!2sfr"
+                            frameborder="0"
+                            width="100%"
+                            height="400"
+                            allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
+            <div class="col">
+                <h2 class="text-center">SALLE DEFAUCOMPRET</h2>
+                <h3>Horaires Saison 2018-2019:</h3>
+                <h4>Judo</h4>
+                Mercredi 11h-12h40: Cours Babys-Mini Poussins (2012-2015)<br/>
+                Mercredi 13h30-14h30: Cours Judo Babys (2014-2015)<br/>
+                Mercredi 14h30-15h30: Cours Judo Mini-Poussins (2012-2013)<br/>
+                Mercredi 15h30-16-30: Cours Judo Poussins/Benjamins (Enfants nés de 2008 à 2011)<br/>
+                Mercredi 16h30-18h: Cours Judo Ado-Adultes Loisirs<br/>
+                Vendredi 18h-19h30: Cours Judo Ado-Adultes (Ne-waza, Kata)<br/>
+                Vendredi 19h30-21h: Cours Judo Adultes (nés avant 2005)<br/>
+                Samedi 13h30-14h30: Cours Judo Babys (Enfants nés en 2014-2015)<br/>
+                Samedi 14h30-15h30: Cours Judo Mini-Poussins (Enfants nés en 2012-2013)<br/>
+                Samedi 15h30-16h30: Cours Judo Poussins/Benjamins (Enfants nés de 2008 à 2011)<br/>
+                Samedi 16h30-17h30: Cours Judo Benjamins/Minimes (Enfants nés de 2006 à 2009)<br/>
+                Samedi 17h30-19h: Cours Judo Préparation Grades<br/>
+                <h4>Taiso</h4>
+                Dimanche 9h-10h30: Cours Taïso<br/>
+                <h3>Localisation:</h3>
+                <div class="text-center">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10123.531260071102!2d3.0872175!3d50.6292937!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xaa09394f92c9509f!2sComplexe%20sportif%20Auguste%20Defaucompret!5e0!3m2!1sfr!2sfr!4v1594217549823!5m2!1sfr!2sfr"
+                            frameborder="0"
+                            width="100%"
+                            height="400"
+                            allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
