[+] disciplines -> judo -> adhésions

--- a/templates/disciplines/judo.html.twig
+++ b/templates/disciplines/judo.html.twig
@@ -124,8 +124,8 @@
                 </div>
             </div>
             <div id="adhésion" class="tab-pane fade">
-                <h3>Menu 2</h3>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                <h3>Inscription</h3>
+                <a href="{{ path('downloadInscription') }}">Fiche d'inscription</a>
             </div>
         </div>
     </div>
