[+] disciplines -> jujitsu/newaza/taiso -> prepare template

--- a/templates/disciplines/judo.html.twig
+++ b/templates/disciplines/judo.html.twig
@@ -9,7 +9,6 @@
             <li><a data-toggle="tab" href="#cours">Cours</a></li>
             <li><a data-toggle="tab" href="#adhésion">Adhésion</a></li>
         </ul>
-
         <div class="tab-content">
             <div id="histoireValeurs" class="tab-pane fade in active">
                 <h3>Histoire du Judo</h3>
@@ -125,7 +124,7 @@
             </div>
             <div id="adhésion" class="tab-pane fade">
                 <h3>Inscription</h3>
-                <a href="{{ path('downloadInscription') }}">Fiche d'inscription</a>
+                <a href="{{ path('downloadJudoInscription') }}">Fiche d'inscription</a>
             </div>
         </div>
     </div>
