--- a/templates/disciplines/ju-jitsu.html.twig
+++ b/templates/disciplines/ju-jitsu.html.twig
@@ -3,18 +3,22 @@
 {% block title %}Ju-Jitsu - Lille Judo{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/mtop/EPITECH/HUB/lillejudo/src/Controller/DisciplinesController.php'|file_link(0) }}">src/Controller/DisciplinesController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/mtop/EPITECH/HUB/lillejudo/templates/disciplines/index.html.twig'|file_link(0) }}">templates/disciplines/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div class="container">
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#histoireValeurs">Histoire et Valeurs</a></li>
+            <li><a data-toggle="tab" href="#cours">Cours</a></li>
+            <li><a data-toggle="tab" href="#adhésion">Adhésion</a></li>
+        </ul>
+        <div class="tab-content">
+            <div id="histoireValeurs" class="tab-pane fade in active">
+                <h3>Histoire et Valeurs</h3>
+            </div>
+            <div id="cours" class="tab-pane fade">
+                <h3>Cours</h3>
+            </div>
+            <div id="adhésion" class="tab-pane fade">
+                <h3>Adhésion</h3>
+            </div>
+        </div>
+    </div>
 {% endblock %}
