[~] login.html.twig: in container - base.html.twig: rewrite css class name

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
             .dropdown:hover .dropdown-menu{
                 display: block;
             }
-            .page-footer {
+            .footer {
                 background: lightgray;
             }
             .navbar .navbar-nav {
@@ -20,7 +20,6 @@
                 float: none;
                 vertical-align: top;
             }
-
             .navbar .navbar-collapse {
                 text-align: center;
             }
@@ -93,7 +92,7 @@
         {% endif %}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
-        <footer class="page-footer font-small stylish-color-dark pt-4">
+        <footer class="footer pt-4">
             <div class="container text-center text-md-left">
                 <div class="row">
                     <div class="col-md-4 mx-auto">
