[+] inscription's controller and templates

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -66,6 +66,8 @@
                             Inscription
                         </a>
                         <div class="dropdown-menu" style="background: green" aria-labelledby="navbarInscriptionMenuLink">
+                            <a class="dropdown-item" href="{{ path('adhesion') }}">Adhésion</a>
+                            <a class="dropdown-item" href="{{ path('competitions') }}">Compétitions</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
