--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,26 +62,31 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" style="color: black; background: green" id="navbarInscriptionMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" style="color: black; background: #489343" id="navbarInscriptionMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Inscription
                         </a>
-                        <div class="dropdown-menu" style="background: green" aria-labelledby="navbarInscriptionMenuLink">
+                        <div class="dropdown-menu" style="background: #489343" aria-labelledby="navbarInscriptionMenuLink">
                             <a class="dropdown-item" href="{{ path('adhesion') }}">Adhésion</a>
                             <a class="dropdown-item" href="{{ path('competitions') }}">Compétitions</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" style="color: black; background: blue" id="navbarActualitesMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" style="color: black; background: #0B70C0" id="navbarActualitesMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Actualités
                         </a>
-                        <div class="dropdown-menu" style="background: blue" aria-labelledby="navbarActualitesMenuLink">
+                        <div class="dropdown-menu" style="background: #0B70C0" aria-labelledby="navbarActualitesMenuLink">
                             <a class="dropdown-item" href="{{ path('newsletter') }}">Newsletter</a>
                             <a class="dropdown-item" href="{{ path('actualites-club') }}">Actualités Club</a>
                             <a class="dropdown-item" href="{{ path('actualites-nationale-internationale') }}">Actualités Nationale/Internationale</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" style="color: black; background: saddlebrown" href="{{ path('documents') }}">
+                        <a class="nav-link" style="color: black; background: #503D07" href="{{ path('documents') }}">
+                            Documents
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" style="color: white; background: #503D07" href="{{ path('documents') }}">
                             Documents
                         </a>
                     </li>
