[~] move Luc Judo band from base to index

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -3,6 +3,12 @@
 {% block title %}Acceuil - Lille Judo{% endblock %}
 
 {% block body %}
+    <div class="text-center" style="background-image: url('https://dummyimage.com/1000x800/a80202/ffffff')">
+        <h1 class="display-1" style="color: black">
+            LUC JUDO<br/>
+            <small class="text-white">Judo - Ju-Jitsu - Ne Waza - Taiso</small>
+        </h1>
+    </div>
     <div class="container">
         <table class="table">
             <thead>
