[+] template for blog posts on acceuil and newsletter

--- a/templates/actualites/actualites-club.html.twig
+++ b/templates/actualites/actualites-club.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Actualités Club - Lille Judo!{% endblock %}
+{% block title %}Actualités Club - Lille Judo{% endblock %}
 
 {% block body %}
 <style>
