--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -10,28 +10,58 @@
         </h1>
     </div>
     <div class="container">
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Title</th>
-                <th>Body</th>
-            </tr>
-            </thead>
-            <tbody>
+        <div class="row">
             {% for post in posts %}
-                <tr>
-                    <td>{{ post.title }}</td>
-                    <td>{{ post.body }}</td>
-                </tr>
+                <div class="col-lg-4">
+                    <svg class="bd-placeholder-img rounded-circle"
+                         width="140"
+                         height="140"
+                         xmlns="http://www.w3.org/2000/svg"
+                         preserveAspectRatio="xMidYMid slice"
+                         focusable="false"
+                         role="img"
+                         aria-label="Placeholder: 140x140">
+                        <title>Placeholder</title>
+                        <rect width="100%" height="100%" fill="#777"/>
+                        <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
+                    </svg>
+                    <h2>{{ post.title }}</h2>
+                    <p>{{ post.body }}</p>
+                    <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                </div>
             {% else %}
-                <tr>
-                    <td colspan="6">no records found</td>
-                </tr>
+                <div class="col-lg-4">
+                    no records found
+                </div>
             {% endfor %}
-            </tbody>
-        </table>
+        </div>
     </div>
-
+    <div class="album py-5">
+        <div class="container">
+            <div class="row">
+                {% for post in posts %}
+                    <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm">
+                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                            <div class="card-body">
+                                <h2>{{ post.title }}</h2>
+                                <p class="card-text">{{ post.body }}</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% else %}
+                    <div class="col-md-4">
+                        no records found
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
     <div class="text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.75805227567!2d3.071911315859676!3d50.63161128217546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d58cd174730f%3A0xf0f98712dd300f10!2sSports%20de%20contact%20Lille%20Etudiants%20Club!5e0!3m2!1sfr!2sfr!4v1594216294738!5m2!1sfr!2sfr"
                 frameborder="0"
