--- a/templates/actualites/newsletter.html.twig
+++ b/templates/actualites/newsletter.html.twig
@@ -1,20 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Newletter - Lille Judo!{% endblock %}
+{% block title %}Newsletter - Lille Judo{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/mtop/EPITECH/HUB/lillejudo/src/Controller/ActualitesController.php'|file_link(0) }}">src/Controller/ActualitesController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/mtop/EPITECH/HUB/lillejudo/templates/actualites/index.html.twig'|file_link(0) }}">templates/actualites/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div class="container">
+        {% for post in posts %}
+            <div class="row featurette">
+                <div class="col-md-3">
+                    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="250" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 250x250"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">250x250</text></svg>
+                </div>
+                <div class="col-md-7">
+                    <h2 class="featurette-heading">{{ post.title }}</h2>
+                    <p class="lead">{{ post.body }}</p>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+        {% else %}
+            <tr>
+                <td colspan="6">no records found</td>
+            </tr>
+        {% endfor %}
+        <div class="navigation">
+            {{ knp_pagination_render(posts) }}
+        </div>
+    </div>
 {% endblock %}
+
