--- a/templates/actualites/newsletter.html.twig
+++ b/templates/actualites/newsletter.html.twig
@@ -13,6 +13,8 @@
                     <h2 class="featurette-heading">{{ post.title }}</h2>
                     <p class="lead">{{ post.body }}</p>
                 </div>
+                <a href="#">Voir l'article</a>
+{#                <a href="{{ path('post_show', {'id': post.id}) }}">show</a>#}
             </div>
             <hr class="featurette-divider">
         {% else %}
@@ -20,7 +22,7 @@
                 <td colspan="6">no records found</td>
             </tr>
         {% endfor %}
-        <div class="navigation">
+        <div class="navigation text-center">
             {{ knp_pagination_render(posts) }}
         </div>
     </div>
