--- a/templates/actualites/newsletter.html.twig
+++ b/templates/actualites/newsletter.html.twig
@@ -13,8 +13,8 @@
                     <h2 class="featurette-heading">{{ post.title }}</h2>
                     <p class="lead">{{ post.body }}</p>
                 </div>
-                <a href="#">Voir l'article</a>
-{#                <a href="{{ path('post_show', {'id': post.id}) }}">show</a>#}
+{#                <a href="#">Voir l'article</a>#}
+                <a href="{{ path('newsletter_show', {'id': post.id}) }}">Voir l'article</a>
             </div>
             <hr class="featurette-divider">
         {% else %}
