[~] update assets path to fit with twig extension

--- a/templates/disciplines/judo.html.twig
+++ b/templates/disciplines/judo.html.twig
@@ -13,7 +13,7 @@
             <div id="histoireValeurs" class="tab-pane fade in active">
                 <h3>Histoire du Judo</h3>
                 <figure class="figure float-left">
-                    <img src="assets/jigoro_kano.jpg" class="figure-img img-fluid" alt="Jigoro Kano">
+                    <img src="{{ asset('assets/jigoro_kano.jpg') }}" class="figure-img img-fluid" alt="Jigoro Kano">
                     <figcaption class="figure-caption">Jigoro Kano</figcaption>
                 </figure>
                 <p>
@@ -44,7 +44,7 @@
                 </p>
                 <h3>Le Judo: pour qui ?</h3>
                 <figure class="figure float-right">
-                    <img src="assets/obi_katakana_ceinture.jpg" class="figure-img img-fluid" alt="Obi - Ceinture">
+                    <img src="{{ asset('assets/obi_katakana_ceinture.jpg') }}" class="figure-img img-fluid" alt="Obi - Ceinture">
                     <figcaption class="figure-caption text-right">Obi - Ceinture</figcaption>
                 </figure>
                 <p>
@@ -53,7 +53,7 @@
                 </p>
                 <h3>Les Valeurs du Judo</h3>
                 <figure class="text-center">
-                    <img src="assets/code_moral_judo.jpg" class="figure-img img-fluid" alt="Code Moral du Judo">
+                    <img src="{{ asset('assets/code_moral_judo.jpg') }}" class="figure-img img-fluid" alt="Code Moral du Judo">
                     <figcaption class="figure-caption">Code Moral du Judo</figcaption>
                 </figure>
                 <p>
