--- a/templates/club/contact.html.twig
+++ b/templates/club/contact.html.twig
@@ -12,6 +12,6 @@
     </div>
     <div class="container text-center">
         <h2>Réseaux</h2>
-        <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/"><img src="assets/FB_logo.jpg"></a>
+        <a href="https://www.facebook.com/pages/category/Amateur-Sports-Team/LUC-Judo-335783152973/"><img src="{{ asset('assets/FB_logo.jpg') }}" alt="FB Logo"></a>
     </div>
 {% endblock %}
